# server_version

./: CMakeLists.txt  README.md  clear_param.sh  config.txt
log/: test.txt
log/config_backup/: cam_iq_imx258.xml  cam_iq_ov9750.xml  sysctl.conf
log/param/: FYGQ.txt  KYAQ.txt  MHZ.txt  PYSS.txt  TGCHBGC.txt  TGDMQ.txt  TGDZW.txt  TGHK.txt  YBTGCH.txt  ZGAQ.txt
log/param/config/: CHTS.txt  FYGQ.txt  KYAQ.txt  LXQ.txt  MHZ.txt  TGHK.txt  ZGAQ.txt
src/funs/: funs.cpp  funs.h
src/menu_config/: menu_config.cpp  menu_config.h
src/socket_server/: HttpServer.cpp  HttpServer.h
